# litestar-sendparcel

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: api.md  conf.py  configuration.md  index.md  quickstart.md  requirements.txt
docs/plans/: 2026-02-15-litestar-critical-fixes.md  2026-02-15-litestar-example-and-docs.md  2026-02-15-litestar-testing.md
example/: README.md  app.py  delivery_sim.py  models.py  pyproject.toml
example/templates/: base.html  delivery_gateway.html  home.html  order_detail.html  result.html  shipment_detail.html
example/templates/partials/: sim_panel.html  status_badge.html
examples/: app.py
src/litestar_sendparcel/: __init__.py  config.py  dependencies.py  exceptions.py  plugin.py  protocols.py  registry.py  retry.py  schemas.py
src/litestar_sendparcel/contrib/: __init__.py
src/litestar_sendparcel/contrib/sqlalchemy/: __init__.py  models.py  repository.py  retry_store.py
src/litestar_sendparcel/routes/: __init__.py  callbacks.py  shipments.py
tests/: conftest.py  test_config.py  test_contrib_sqlalchemy_models.py  test_contrib_sqlalchemy_repository.py  test_contrib_sqlalchemy_retry_store.py  test_controllers.py  test_dependencies.py  test_example_app.py  test_example_e2e.py  test_exceptions.py  test_integration.py  test_plugin.py  test_protocols.py  test_public_api.py  test_registry.py  test_retry.py  test_routes_callbacks.py  test_routes_flow.py  test_routes_shipments.py  test_schemas.py
