[project]
name = "litestar-sendparcel-example"
version = "0.1.0"
description = "Example Litestar app using litestar-sendparcel"
requires-python = ">=3.12"
dependencies = [
    "litestar[standard]>=2.0.0",
    "litestar-sendparcel>=0.1.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.20.0",
    "jinja2>=3.1.0",
    "uvicorn>=0.30.0",
]

[tool.uv.sources]
litestar-sendparcel = { path = "..", editable = true }
python-sendparcel = { path = "../../python-sendparcel", editable = true }
